# rhcisdaq

./: .gitignore  CMakeLists.txt
cmake/: Config.cmake.in  cpprawstring.cmake
module/: CMakeLists.txt  Makefile  README.md  axidmachar.c  axidmachar.h
script/: bit2bin.sh  loadfirmware.sh  loadmodule.sh  xsa2dtbo.sh
source/: CMakeLists.txt
source/common/: CMakeLists.txt  mysystem.hh
source/common/getopt/: CMakeLists.txt  getopt.h
source/common/linenoiseng/: CMakeLists.txt
source/common/rapidjson/: CMakeLists.txt  myrapidjson.h
source/exe/: CMakeLists.txt  TcpServ.hh  devmem_readwrite.cc  dmarx_dump.cc  dmarx_test.cc  memDeamon.cc  regctrl_main.cc
source/lib/: CMakeLists.txt
source/lib/include/: Camera.hh  DataFrame.hh  DataReader.hh  FirmwarePortal.hh  Layer.hh
source/lib/misc/: reg_cmd_list.json
source/lib/src/: Camera.cc  DataFrame.cc  DataReader.cc  FirmwarePortal.cc  Layer.cc
source/web/: CMakeLists.txt
source/web/include/: CameraHttpWSHandler.hh
source/web/src/: CameraHttpWSHandler.cc
